--- a/public/css/app.css
+++ b/public/css/app.css
@@ -245,7 +245,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
 */img,
 video {
   max-width: 100%;
-  height: auto;
+  /* height: auto; */
 }/* Make elements with the HTML hidden attribute stay hidden by default */[hidden] {
   display: none;
 }[type='text'],input:where(:not([type])),[type='email'],[type='url'],[type='password'],[type='number'],[type='date'],[type='datetime-local'],[type='month'],[type='search'],[type='tel'],[type='time'],[type='week'],[multiple],textarea,select {
