--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2587,15 +2587,65 @@ body {
     width: 100%;
   }
 }
-.blog-title{
+
+.blog-title {
   height: fit-content;
   min-height: 80px;
 }
-.discover-btn{
-    display: block;
-  }
-@media(max-width:1207px){
-  .discover-btn{
+
+.discover-btn {
+  display: block;
+}
+
+@media(max-width:1207px) {
+  .discover-btn {
     display: none;
+  }
+}
+
+.mobile-hide {
+  display: flex;
+}
+
+.mobile-show {
+  display: none;
+}
+
+.flex-manage-custom {
+  flex-direction: row !important;
+}
+
+.flex-manage-custom-mbl {
+  display: flex;
+  flex-direction: row !important;
+  text-align: start;
+}
+
+@media(max-width: 992px) {
+
+  .mobile-hide {
+    display: none;
+  }
+
+  .flex-manage-custom {
+    flex-direction: column !important;
+  }
+
+  #top-bar {
+
+    display: none;
+  }
+
+  .mobile-show {
+    display: flex;
+  }
+}
+
+@media(max-width:600px) {
+  .flex-manage-custom-mbl {
+    flex-direction: column !important;
+    text-align: center;
+    align-items: center;
+    max-width: 320px;
   }
 }
